routing added, details route working but not showing correct info?

--- a/src/app/housing-location/housing-location.component.css
+++ b/src/app/housing-location/housing-location.component.css
@@ -31,28 +31,3 @@
     content: "\203A";
     margin-left: 5px;
   }
-  styles.css
-  /* Put these styles in: src/styles.css */
-  
-  * {
-    margin: 0;
-    padding: 0;
-  }
-  
-  body {
-    font-family: 'Be Vietnam Pro', sans-serif;
-  }
-  :root {
-    --primary-color: #605DC8;
-    --secondary-color: #8B89E6;
-    --accent-color: #e8e7fa;
-    --shadow-color: #E8E8E8;
-  }
-  
-  button.primary {
-    padding: 10px;
-    border: solid 1px var(--primary-color);
-    background: var(--primary-color);
-    color: white;
-    border-radius: 8px;
-  }
